# sentinel-usecases

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTINGSTARTED.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: changelog.md  conf.py  contributing.md  getting-started.md  index.rst
docs/api/: detectors.rst  explorer.rst  ingestion.rst  search.js  sentinel.html  simulation.rst  transformer.rst  visualization.rst
docs/user-guide/: detectors.md  explorer.md  ingestion.md  simulation.md  transformer.md  visualization.md
examples/: custom_parser_example.py  detector_comparison.py  explorer_quick_check.py  rolling_aggregation_example.py
notebooks/: 01_ingestion_quickstart.ipynb  02_transformer_quickstart.ipynb  03_explorer_quickstart.ipynb  04_detectors_quickstart.ipynb  05_deep_detectors_quickstart.ipynb  06_visualization_quickstart.ipynb  07_simulation_quickstart.ipynb  08_end_to_end_pipeline.ipynb  Exploracion_PDTI.ipynb  Exploracion_PDTI_feb11.ipynb  custom_detector_quickstart.ipynb  ingestion_parsers.ipynb  lnn_quickstart.ipynb  quickstart.ipynb
notebooks/data/: agg_logs_example.csv
paper/: paper.bib  paper.md
src/sentinel/: __init__.py  _utils.py
tests/: conftest.py  test_cortex_usecase.py  test_explorer_detect_anomalies.py  test_imports.py  test_isolation_forest_detector.py  test_quality_report.py  test_signal_diagnostics.py  test_thresholds.py
usecases/Cortex/: README.md
(+73 files in other folders)
