[project]
name = "sentinel"
version = "0.1.0"
description = "Signal validation and anomaly detection for log data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ipykernel>=6.29.5",
]
deep = ["torch>=2.6.0"]
viz = [
    "plotly>=5.0.0",
    "shap>=0.44.0",
]

[tool.setuptools.packages.find]
where = ["src"]
